@@ -1,7 +1,7 @@
 from . import html
 
 
-def inline(func):
+def img_element(func):
     def convert_image(image):
         attributes = func(image).copy()
         if image.alt_text:
@@ -10,3 +10,6 @@ def inline(func):
         return [html.self_closing_element("img", attributes)]
     
     return convert_image
+
+# Undocumented, but retained for backwards-compatibility with 0.3.x
+inline = img_element
