@@ -24,7 +24,7 @@ def main():
             convert_image = None
             output_path = args.output
         else:
-            convert_image = mammoth.images.inline(ImageWriter(args.output_dir))
+            convert_image = mammoth.images.img_element(ImageWriter(args.output_dir))
             output_filename = "{0}.html".format(os.path.basename(args.path).rpartition(".")[0])
             output_path = os.path.join(args.output_dir, output_filename)
         
